edited category labels

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <section class="category-description">
       <div id="desc-memory-log" class="description active">
-        Daily notes on memorizing Shakespeare's works, starting with the Sonnets
+        Daily notes on memorizing Shakespeare's works
       </div>
       <div id="desc-breathing-wires" class="description">
-        Explorations of AI's role in literary work and memorization
+        Elizabethan robotics
       </div>
       <div id="desc-missing-choirs" class="description">
-        Experimental analysis of patterns and structures, real and invented
+        Turing, Shannon, et al poetics
       </div>
       <div id="desc-all" class="description">
         All posts across categories
