changed to renaissance

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Daily notes on memorizing Shakespeare's works
       </div>
       <div id="desc-breathing-wires" class="description">
-        Elizabethan robotics
+        Renaissance robotics
       </div>
       <div id="desc-missing-choirs" class="description">
         Turing, Shannon, et al poetics
