--- a/post-2025-05-22.html
+++ b/post-2025-05-22.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=450">
-  <title>May 22, 2025 – Sonnet Memory Log</title>
+  <title>May 22, 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,16 +11,15 @@
     <a class="back-link" href="index.html">&larr; Back to list</a>
     <h1>May 22, 2025</h1>
     <article>
-      <p>The hardest step with the sonnets is this first one.</p>
+      <p>The hardest step is the first one.</p>
       <p>Two approaches to memorizing anything large.</p>
       <ul>
-        <li>Start from the first word and memorizing in order to the last.</li>
+        <li>Start from the first word and memorize in order to the last.</li>
         <li>Memorize the first word of each part of the large thing and add a little bit at a time to each part until the whole thing is done.</li>
       </ul>
       <p>Here's why the second method is the better one.</p>
       <hr>
       <p>It's easier to memorize three words than 300. And it's easier to add three words each day to 100 things than adding 300 words to one thing. The hardest part is getting the first three words of the 100 things in mind. After that, it's almost as easy to add a few new words to each of them each day as it is to review them.</p>
-      <p>Today I'm doing the really heavy lift. I'm trying to learn the first line of all 154 sonnets. After that's done, adding one line to a third of them will be much easier than memorizing 50-some lines in a row.</p>
       <hr>
       <p>The basic principle is to add the smallest meaningful chunk possible to many things. It's barely noticeable to the mind. It's like adding a little weight to something someone's carrying.</p>
       <p>"Hey, could you please add this? It's a tiny little thing."</p>
