--- a/post-2025-05-23.html
+++ b/post-2025-05-23.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=450">
-  <title>May 23, 2025 – Sonnet Memory Log</title>
+  <title>May 23, 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
